--- a/Source code/package.json
+++ b/Source code/package.json
@@ -4,11 +4,11 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "build:dev": "vite build --mode development",
-    "lint": "eslint .",
-    "preview": "vite preview"
+    "dev": "bunx vite",
+    "build": "bunx vite build",
+    "build:dev": "bunx vite build --mode development",
+    "lint": "bunx eslint .",
+    "preview": "bunx vite preview"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
