--- a/Source code/package.json
+++ b/Source code/package.json
@@ -8,7 +8,12 @@
     "build": "bunx vite build",
     "build:dev": "bunx vite build --mode development",
     "lint": "bunx eslint .",
-    "preview": "bunx vite preview"
+    "preview": "bunx vite preview",
+    "dev:npm": "vite",
+    "build:npm": "vite build",
+    "build:dev:npm": "vite build --mode development",
+    "lint:npm": "eslint .",
+    "preview:npm": "vite preview"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
