--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,22 +29,25 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
       
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
+      - name: Setup Bun
+        uses: oven-sh/setup-bun@v1
         with:
-          node-version: '18'
+          bun-version: latest
+          
+      - name: Change to source directory
+        run: cd "Source code"
           
       - name: Install dependencies
-        run: npm ci
+        run: bun install
         
       - name: Build project
-        run: npm run build:npm
+        run: bun run build
         
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          # Upload dist folder
-          path: './dist'
+          # Upload dist folder from the source directory
+          path: './Source code/dist'
 
   # Deploy job
   deploy:
